cmake_minimum_required(VERSION 3.30)
project(2526_POO_TP)

set(CMAKE_CXX_STANDARD 23)

add_executable(2526_POO_TP main.cpp
        Jardim.cpp
        Jardim.h
        Solo.cpp
        Solo.h
        Plantas.cpp
        Plantas.h
        Ferramentas.cpp
        Ferramentas.h
        Jardineiro.cpp
        Jardineiro.h
        GestorComandos.cpp
        GestorComandos.h)
