cmake_minimum_required(VERSION 3.30)
project(2526_POO_TP)

set(CMAKE_CXX_STANDARD 23)

add_executable(2526_POO_TP main.cpp
        Jardim.cpp
        Jardim.h
        Solo.cpp
        Solo.h
        Planta.cpp
        Planta.h
        Ferramenta.cpp
        Ferramenta.h
        Jardineiro.cpp
        Jardineiro.h
        GestorComandos.cpp
        GestorComandos.h
        Simulacao.cpp
        Simulacao.h
        Utilidades.cpp
        Utilidades.h
        Roseira.cpp
        Roseira.h
        Cacto.cpp
        Cacto.h
        ErvaDaninha.cpp
        ErvaDaninha.h
        BastaoImperador.cpp
        BastaoImperador.h
        Regador.cpp
        Regador.h
        Adubo.cpp
        Adubo.h
        TesouraPoda.cpp
        TesouraPoda.h
        FerramentaZ.cpp
        FerramentaZ.h)
